--- a/app/src/main/res/layout/directory_item_grid.xml
+++ b/app/src/main/res/layout/directory_item_grid.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/dir_holder"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:clickable="true"
-    android:focusable="true"
-    android:padding="1px">
+    android:focusable="true">
 
     <com.simplemobiletools.gallery.pro.views.MySquareImageView
         android:id="@+id/dir_thumbnail"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
     <ImageView
         android:id="@+id/dir_lock"
@@ -26,13 +25,13 @@
         android:contentDescription="@string/lock_folder"
         android:padding="@dimen/lock_padding"
         android:src="@drawable/ic_lock_vector"
-        android:visibility="gone"/>
+        android:visibility="gone"
+        tools:visibility="visible" />
 
     <ImageView
         android:id="@+id/dir_check"
         android:layout_width="@dimen/selection_check_size"
         android:layout_height="@dimen/selection_check_size"
-        android:layout_alignEnd="@+id/dir_shadow_holder"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_margin="@dimen/small_margin"
@@ -40,7 +39,8 @@
         android:contentDescription="@null"
         android:padding="@dimen/tiny_margin"
         android:src="@drawable/ic_check_vector"
-        android:visibility="gone"/>
+        android:visibility="gone"
+        tools:visibility="visible" />
 
     <ImageView
         android:id="@+id/dir_pin"
@@ -53,25 +53,16 @@
         android:contentDescription="@string/pin"
         android:padding="@dimen/small_margin"
         android:src="@drawable/ic_pin"
-        android:visibility="gone"/>
-
-    <ImageView
-        android:id="@+id/dir_shadow_holder"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/tmb_shadow_height"
-        android:layout_alignStart="@+id/dir_bottom_holder"
-        android:layout_alignEnd="@+id/dir_bottom_holder"
-        android:layout_alignParentBottom="true"
-        android:background="@drawable/gradient_background"
-        android:contentDescription="@null"/>
+        android:visibility="gone"
+        tools:visibility="visible" />
 
     <LinearLayout
         android:id="@+id/dir_bottom_holder"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/dir_thumbnail"
         android:layout_alignStart="@+id/dir_thumbnail"
         android:layout_alignEnd="@+id/dir_thumbnail"
-        android:layout_alignParentBottom="true"
         android:gravity="bottom"
         android:orientation="vertical"
         android:paddingLeft="@dimen/medium_margin"
@@ -89,14 +80,15 @@
             android:shadowColor="@color/default_background_color"
             android:shadowRadius="4"
             android:textColor="@android:color/white"
-            android:textSize="@dimen/normal_text_size"/>
+            android:textSize="@dimen/big_text_size"
+            android:textStyle="italic" />
 
         <TextView
             android:id="@+id/photo_cnt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@android:color/white"
-            android:textSize="@dimen/normal_text_size"/>
+            android:textSize="@dimen/normal_text_size" />
 
     </LinearLayout>
 
@@ -111,6 +103,7 @@
         android:paddingEnd="@dimen/small_margin"
         android:paddingBottom="@dimen/small_margin"
         android:src="@drawable/ic_sd_card_vector"
-        android:visibility="gone"/>
+        android:visibility="gone"
+        tools:visibility="visible" />
 
 </RelativeLayout>
